# quark

./: .gitignore  README.md  pyproject.toml
src/quark_cli/: api.py  cli.py
