[project]
name = "quark-cli"
version = "0.1.0"
description = "A library to interact with Quark Drive."
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "requests",
    "rich"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
quark-cli = "quark_cli.cli:main"
